--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "postcss-scss": "^1.0.2",
     "prettier": "^1.5.3",
     "prettier-eslint": "^6.4.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
@@ -26,5 +24,10 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server"
+  },
+  "dependencies": {
+    "d3": "^4.10.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
