--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.5",
+    "enzyme": "^2.9.1",
     "eslint": "^4.4.1",
     "eslint-config-prettier": "^2.3.0",
     "eslint-plugin-prettier": "^2.2.0",
+    "expect.js": "^0.3.1",
+    "jsdom": "^11.2.0",
     "lodash": "^4.17.4",
+    "mocha": "^3.5.3",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "postcss-scss": "^1.0.2",
     "prettier": "^1.5.3",
     "prettier-eslint": "^6.4.2",
+    "react-test-renderer": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
@@ -23,7 +29,8 @@
   },
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "test": "mocha --require spec/browser.js './src/**/*.spec.js?(x)'"
   },
   "dependencies": {
     "d3": "^4.10.2",
